# django-strawberry-subscription-example

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  start
envs/local/: .django.env
messagingapp/: asgi.py  schema.py  settings.py  urls.py  views.py  wsgi.py
messagingapp/templates/: index.html  room.html
